test: implement the BenchAEItemStack test-double methods